[gd_scene load_steps=25 format=3 uid="uid://5w2uckepo61b"]

[ext_resource type="Script" path="res://Scene/cutscenes/boss_fight/boss_animation.gd" id="1_puylk"]
[ext_resource type="Texture2D" uid="uid://obdjvagmko35" path="res://Assets/door/!Demon Door.png" id="2_eg5gg"]
[ext_resource type="Texture2D" uid="uid://054byy2ohkpx" path="res://Assets/lifebar_door.png" id="3_mc8as"]
[ext_resource type="Texture2D" uid="uid://cridojsih5lgk" path="res://Assets/lifebar_door_filled.png" id="4_wsegs"]
[ext_resource type="LabelSettings" uid="uid://cfdg0di8ool2i" path="res://Scene/Ui/policeLabel.tres" id="5_74ngf"]
[ext_resource type="FontFile" uid="uid://b7qf1ys3xohb5" path="res://font/Minecraft.ttf" id="5_ntr0q"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ntf6a"]
atlas = ExtResource("2_eg5gg")
region = Rect2(0, 0, 240, 161)

[sub_resource type="AtlasTexture" id="AtlasTexture_tip5c"]
atlas = ExtResource("2_eg5gg")
region = Rect2(240, 0, 240, 161)

[sub_resource type="AtlasTexture" id="AtlasTexture_axu3n"]
atlas = ExtResource("2_eg5gg")
region = Rect2(480, 0, 240, 161)

[sub_resource type="AtlasTexture" id="AtlasTexture_voixs"]
atlas = ExtResource("2_eg5gg")
region = Rect2(720, 0, 240, 161)

[sub_resource type="AtlasTexture" id="AtlasTexture_hj6iq"]
atlas = ExtResource("2_eg5gg")
region = Rect2(960, 0, 240, 161)

[sub_resource type="AtlasTexture" id="AtlasTexture_alo0t"]
atlas = ExtResource("2_eg5gg")
region = Rect2(1200, 0, 240, 161)

[sub_resource type="AtlasTexture" id="AtlasTexture_cny3t"]
atlas = ExtResource("2_eg5gg")
region = Rect2(1440, 0, 240, 161)

[sub_resource type="AtlasTexture" id="AtlasTexture_jr5t6"]
atlas = ExtResource("2_eg5gg")
region = Rect2(1680, 0, 240, 161)

[sub_resource type="AtlasTexture" id="AtlasTexture_hlxvu"]
atlas = ExtResource("2_eg5gg")
region = Rect2(1920, 0, 240, 161)

[sub_resource type="SpriteFrames" id="SpriteFrames_gdv1u"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ntf6a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tip5c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_axu3n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_voixs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hj6iq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_alo0t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cny3t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jr5t6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hlxvu")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_io26s"]
resource_name = "Idle"
length = 2.66667
loop_mode = 1
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.5, 0.666667, 0.833333, 1, 1.16667, 1.33333, 1.5, 1.66667, 1.83333, 2, 2.16667, 2.33333, 2.5, 2.66667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 7, 6, 5, 4, 3, 2, 1, 0]
}

[sub_resource type="Animation" id="Animation_awu60"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lixmr"]
_data = {
"Idle": SubResource("Animation_io26s"),
"RESET": SubResource("Animation_awu60")
}

[sub_resource type="LabelSettings" id="LabelSettings_80vnn"]
font = ExtResource("5_ntr0q")
font_size = 80
font_color = Color(0, 0.831373, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_p0imv"]
font = ExtResource("5_ntr0q")
font_size = 80
font_color = Color(0.94902, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_pcgg4"]
font = ExtResource("5_ntr0q")
font_size = 80

[sub_resource type="LabelSettings" id="LabelSettings_iryc8"]
font = ExtResource("5_ntr0q")
font_size = 80

[sub_resource type="LabelSettings" id="LabelSettings_r2tkw"]
font = ExtResource("5_ntr0q")
font_size = 80
outline_size = 20
outline_color = Color(0, 0, 0, 1)

[node name="BossAnimation" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_puylk")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Boss_Background" type="PanelContainer" parent="CanvasLayer"]
self_modulate = Color(0, 0, 0, 1)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DoorSprite" type="AnimatedSprite2D" parent="CanvasLayer/Boss_Background"]
position = Vector2(640, 340)
scale = Vector2(2.13333, 2.19255)
sprite_frames = SubResource("SpriteFrames_gdv1u")
animation = &"Idle"

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Boss_Background/DoorSprite"]
libraries = {
"": SubResource("AnimationLibrary_lixmr")
}

[node name="BossAttacksDisplay" type="Marker2D" parent="CanvasLayer"]
position = Vector2(352, 392)
scale = Vector2(2, 2)

[node name="LifeBar" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="DoorLifeBar" type="TextureProgressBar" parent="CanvasLayer/LifeBar"]
layout_mode = 0
offset_left = 320.0
offset_top = 448.0
offset_right = 384.0
offset_bottom = 464.0
scale = Vector2(10, 10)
value = 10.0
texture_over = ExtResource("3_mc8as")
texture_progress = ExtResource("4_wsegs")

[node name="StatLabelContainer" type="HBoxContainer" parent="CanvasLayer"]
offset_left = 176.0
offset_top = 74.0
offset_right = 1104.0
offset_bottom = 198.0
theme_override_constants/separation = 55
alignment = 1

[node name="PlayerStatLabel" type="Label" parent="CanvasLayer/StatLabelContainer"]
layout_mode = 2
text = "13"
label_settings = SubResource("LabelSettings_80vnn")

[node name="VSLabel" type="Label" parent="CanvasLayer/StatLabelContainer"]
layout_mode = 2
text = "VS"
label_settings = ExtResource("5_74ngf")

[node name="MonsterStatLabel" type="Label" parent="CanvasLayer/StatLabelContainer"]
layout_mode = 2
text = "18"
label_settings = SubResource("LabelSettings_p0imv")

[node name="ResultOfFightContainer" type="HBoxContainer" parent="CanvasLayer"]
offset_left = 176.0
offset_top = 72.0
offset_right = 1104.0
offset_bottom = 196.0
theme_override_constants/separation = 55
alignment = 1

[node name="ResultLabel" type="Label" parent="CanvasLayer/ResultOfFightContainer"]
layout_mode = 2
text = "-14"
label_settings = SubResource("LabelSettings_pcgg4")

[node name="WinScreen" type="CanvasLayer" parent="."]
visible = false

[node name="Boss_Background" type="PanelContainer" parent="WinScreen"]
self_modulate = Color(0, 0, 0, 1)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="WinScreen"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -325.0
offset_top = -164.5
offset_right = 325.0
offset_bottom = 164.5
grow_horizontal = 2
grow_vertical = 2

[node name="WinLabel" type="Label" parent="WinScreen/CenterContainer"]
layout_mode = 2
text = "Congratulations ! 
You protected the door 
from being opened"
label_settings = SubResource("LabelSettings_iryc8")
horizontal_alignment = 1

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="NextLabel" type="Label" parent="CanvasLayer2"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -467.0
offset_top = 12.0
offset_right = 468.0
offset_bottom = 92.0
grow_horizontal = 2
text = "Press space to continue"
label_settings = SubResource("LabelSettings_r2tkw")
